[gd_scene load_steps=23 format=2]

[ext_resource path="res://Scenes/Button_tex.tscn" type="PackedScene" id=2]
[ext_resource path="res://Sprites/vol_pres.png" type="Texture2D" id=3]
[ext_resource path="res://Sprites/Menu/BT_des.png" type="Texture2D" id=4]
[ext_resource path="res://Sprites/Menu/BT_on.png" type="Texture2D" id=5]
[ext_resource path="res://Sprites/vol_n.png" type="Texture2D" id=6]
[ext_resource path="res://Cody/Sobre.gd" type="Script" id=7]
[ext_resource path="res://Fontes/Comic_Neue/ComicNeue-Regular.ttf" type="FontFile" id=8]
[ext_resource path="res://Fontes/Comic_Neue/ComicNeue-Bold.ttf" type="FontFile" id=9]
[ext_resource path="res://Themes/Botões.tres" type="Theme" id=10]
[ext_resource path="res://Sprites/Menu/BT_off.png" type="Texture2D" id=11]
[ext_resource path="res://Scenes/Movmento.tscn" type="PackedScene" id=12]

[sub_resource type="FontFile" id=7]
size = 25
outline_size = 3
use_filter = true
font_data = ExtResource( 9 )

[sub_resource type="FontFile" id=5]
size = 50
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 9 )

[sub_resource type="FontFile" id=6]
size = 50
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 8 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0.427451, 0.329412, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.027451, 0.262745, 0.207843, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=3]
content_margin_left = 8.0
bg_color = Color( 0.607843, 0.894118, 0.827451, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="Theme" id=8]
CheckBox/icons/checked = ExtResource( 5 )
CheckBox/icons/checked_disabled = ExtResource( 4 )
CheckBox/icons/unchecked = ExtResource( 11 )
CheckBox/icons/unchecked_disabled = ExtResource( 5 )
Label/colors/font_color = Color( 1, 1, 1, 1 )
Label/colors/font_color_shadow = Color( 0, 0, 0, 1 )
Label/colors/font_outline_modulate = Color( 0, 0, 0, 1 )
Label/constants/shadow_offset_y = 4
Label/fonts/font = SubResource( 7 )
Label/styles/normal = null
RichTextLabel/colors/font_color_shadow = Color( 0, 0, 0, 1 )
RichTextLabel/constants/shadow_offset_y = 10
RichTextLabel/fonts/bold_font = SubResource( 5 )
RichTextLabel/fonts/normal_font = SubResource( 6 )
VScrollBar/styles/grabber = SubResource( 1 )
VScrollBar/styles/grabber_highlight = SubResource( 1 )
VScrollBar/styles/grabber_pressed = SubResource( 2 )
VScrollBar/styles/scroll = SubResource( 3 )

[sub_resource type="FontFile" id=10]
size = 30
outline_size = 6
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 9 )

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="StyleBoxEmpty" id=4]

[node name="Sobre" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
scale = Vector2( 1.00009, 1.00009 )
theme = ExtResource( 10 )
script = ExtResource( 7 )
__meta__ = {
"_edit_horizontal_guides_": [ 176.0, 968.0 ],
"_edit_vertical_guides_": [ 212.0, 2128.0 ]
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0.670588, 0.509804, 1 )

[node name="Panel" parent="." instance=ExtResource( 12 )]
modulate = Color( 0, 0.427451, 0.329412, 0.262745 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_right = 0.5
offset_left = -953.0
offset_top = 179.0
offset_right = 953.0
offset_bottom = 966.0
bbcode_enabled = true
text = "[center][b]Como Jogar?[/b]

Ideal para jogar com duas ou mais pessoas. Uma das pessoas ficará com o celular na testa e terá que adivinhar quem é o santo que está aparecendo. Os outros jogadores podem dar dicas sobre a vida do santo em questão. Ganha quem fizer mais pontos.

[b]Desenvolvedor:[/b]
Helderson Santos.

[b]Revisão:[/b]
Célida Frazão;
Mairis Santos;
Rebeca Rodrigues;
Vanessa Gomes.

[b]Agradecimento:[/b]
Página do Instagram @manodooceu

[b]Salve Maria![/b][/center]"
text = "Como Jogar?

Ideal para jogar com duas ou mais pessoas. Uma das pessoas ficará com o celular na testa e terá que adivinhar quem é o santo que está aparecendo. Os outros jogadores podem dar dicas sobre a vida do santo em questão. Ganha quem fizer mais pontos.

Desenvolvedor:
Helderson Santos.

Revisão:
Célida Frazão;
Mairis Santos;
Rebeca Rodrigues;
Vanessa Gomes.

Agradecimento:
Página do Instagram @manodooceu

Salve Maria!"

[node name="Label2" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 260.0
offset_top = 64.0
offset_right = -260.0
offset_bottom = -864.0
text = "SOBRE"
align = 1
autowrap = true

[node name="Label3" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -910.0
offset_top = -80.0
offset_right = 910.0
offset_bottom = -247.998
theme = SubResource( 8 )
text = "hs studio - 2022
versão 2.0.5"
align = 1
valign = 1
autowrap = true
uppercase = true

[node name="Voltar" parent="." instance=ExtResource( 2 )]
offset_left = 94.0
offset_top = 66.0
offset_right = 234.0
offset_bottom = 206.0
normal = ExtResource( 6 )
press = ExtResource( 3 )
hovered = ExtResource( 6 )

[node name="Instagram" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 64.0
offset_top = -61.0
offset_right = 247.0
offset_bottom = -28.0
theme_override_colors/font_focus_color = Color( 0, 0.427451, 0.329412, 1 )
theme_override_colors/font_color = Color( 1, 1, 1, 1 )
theme_override_colors/font_hover_color = Color( 0.607843, 0.894118, 0.827451, 1 )
theme_override_colors/font_pressed_color = Color( 0, 0.427451, 0.329412, 1 )
theme_override_fonts/font = SubResource( 10 )
theme_override_styles/hover = SubResource( 11 )
theme_override_styles/pressed = SubResource( 12 )
theme_override_styles/normal = SubResource( 4 )
text = "INSTAGRAM"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Site" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 293.671
offset_top = -61.0
offset_right = 363.671
offset_bottom = -28.0
theme_override_colors/font_focus_color = Color( 0, 0.427451, 0.329412, 1 )
theme_override_colors/font_color = Color( 1, 1, 1, 1 )
theme_override_colors/font_hover_color = Color( 0.607843, 0.894118, 0.827451, 1 )
theme_override_colors/font_pressed_color = Color( 0, 0.427451, 0.329412, 1 )
theme_override_fonts/font = SubResource( 10 )
theme_override_styles/hover = SubResource( 11 )
theme_override_styles/pressed = SubResource( 12 )
theme_override_styles/normal = SubResource( 4 )
text = "SITE"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="press" from="Voltar" to="." method="_on_Voltar_pressed"]
[connection signal="pressed" from="Instagram" to="." method="_on_Instagram_pressed"]
[connection signal="pressed" from="Site" to="." method="_on_Site_pressed"]
